# SecuredCam

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera_test.cpp  main.cpp
include/: canvas.h  face_detector.h  face_recognizer.h  user.h  vector_db.h
scripts/: generate_model.ps1  generate_model.sh
src/: face_detector.cpp  face_recognizer.cpp  vector_db.cpp
